--- a/milestones/milestone-04-Database-setup&Application-styling/views/auth/login.ejs
+++ b/milestones/milestone-04-Database-setup&Application-styling/views/auth/login.ejs
@@ -45,8 +45,11 @@
         </button>
       </form>
       
-      <div class="auth-link">
-        Don't have an account? <a href="/auth/signup">Sign up</a>
+      <div style="margin-top: 1rem; display:flex; gap:0.5rem;">
+        <a href="/guest" class="btn btn-secondary" style="flex:1; text-align:center;">Play as Guest</a>
+        <div class="auth-link" style="align-self:center;">
+          Don't have an account? <a href="/auth/signup">Sign up</a>
+        </div>
       </div>
     </div>
   </div>
