--- a/milestones/milestone-04-Database-setup&Application-styling/views/auth/signup.ejs
+++ b/milestones/milestone-04-Database-setup&Application-styling/views/auth/signup.ejs
@@ -67,8 +67,11 @@
         </button>
       </form>
       
-      <div class="auth-link">
-        Already have an account? <a href="/auth/login">Sign in</a>
+      <div style="margin-top: 1rem; display:flex; gap:0.5rem;">
+        <a href="/guest" class="btn btn-secondary" style="flex:1; text-align:center;">Play as Guest</a>
+        <div class="auth-link" style="align-self:center;">
+          Already have an account? <a href="/auth/login">Sign in</a>
+        </div>
       </div>
     </div>
   </div>
